--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Курлык-чарт — 15.12.2025</title>
+    <title>Курлык-чарт — 22.12.2025</title>
     <style>
         @font-face {
             font-family: 'Neuropol';
@@ -51,7 +51,7 @@
         }
         ol {
             padding-left: 0;
-            counter-reset: position 21;
+            counter-reset: position 0;
             list-style: none;
         }
         li {
@@ -60,7 +60,7 @@
             padding: 12px 0;
             display: flex;
             align-items: center;
-            counter-increment: position -1;
+            counter-increment: position 1;
             text-shadow: 0 0 10px rgba(255,255,255,0.3);
         }
         li::before {
@@ -122,37 +122,36 @@
 <body>
     <header>
         <h1>КУРЛЫК-ЧАРТ</h1>
-        <div class="subtitle">15.12.2025</div>
+        <div class="subtitle">22.12.2025</div>
     </header>
 
     <div class="chart">
         <ol>
-            <li><span class="track">Miley Cyrus - End Of The World</span> <span class="peak">[1x1]</span> <span class="move-same">(=)</span> <span class="weeks">[26 w]</span></li>
-            <li><span class="track">John Summit & Inez - Crystallized</span> <span class="new">(NEW)</span></li>
-            <li><span class="track">СУМАСШЕДШИЕ ГОЛУБИ! – БУМАЖКИ</span> <span class="peak">[9]</span> <span class="move-down">(-5)</span> <span class="weeks">[8 w]</span></li>
-            <li><span class="track">Tyla - CHANEL</span> <span class="new">(NEW)</span></li>
-            <li><span class="track">Charli XCX - Chains Of Love</span> <span class="peak">[16]</span> <span class="move-up">(+3)</span> <span class="weeks">[2 w]</span></li>
-            <li><span class="track">Ren X The Skinner Brothers - So The Story Goes...</span> <span class="peak">[15]</span> <span class="move-up">(+1)</span> <span class="weeks">[2 w]</span></li>
-            <li><span class="track">Demi Lovato - Fast</span> <span class="peak">[1x2]</span> <span class="move-down">(-11)</span> <span class="weeks">[15 w]</span></li>
-            <li><span class="track">Lady Gaga - The Dead Dance</span> <span class="peak">[1x1]</span> <span class="move-down">(-6)</span> <span class="weeks">[13 w]</span></li>
-            <li><span class="track">Katy Perry - bandaids</span> <span class="peak">[12]</span> <span class="move-up">(+2)</span> <span class="weeks">[4 w]</span></li>
-            <li><span class="track">MC VALERA & DJ FENIX & POKERRRFACED - Ощущение пустоты</span> <span class="peak">[6]</span> <span class="move-down">(-2)</span> <span class="weeks">[10 w]</span></li>
-            <li><span class="track">Leonard Cogen - На заре</span> <span class="peak">[10]</span> <span class="move-up">(+1)</span> <span class="weeks">[5 w]</span></li>
-            <li><span class="track">Shouse & Cub Sport - Only You</span> <span class="peak">[9]</span> <span class="move-up">(+3)</span> <span class="weeks">[6 w]</span></li>
-            <li><span class="track">Shakira - Zoo</span> <span class="peak">[8x2]</span> <span class="move-up">(+2)</span> <span class="weeks">[4 w]</span></li>
-            <li><span class="track">JISOO & ZAYN – EYES CLOSED</span> <span class="peak">[4x2]</span> <span class="move-down">(-3)</span> <span class="weeks">[7 w]</span></li>
-            <li><span class="track">David Guetta, Teddy Swims, Tones & I - Gone Gone Gone</span> <span class="peak">[6]</span> <span class="move-up">(+9)</span> <span class="weeks">[3 w]</span></li>
-            <li><span class="track">Sabrina Carpenter - Tears</span> <span class="peak">[1x2]</span> <span class="move-same">(=)</span> <span class="weeks">[11 w]</span></li>
-            <li><span class="track">KAMRAD - Be Mine</span> <span class="peak">[4]</span> <span class="move-up">(+2)</span> <span class="weeks">[7 w]</span></li>
-            <li><span class="track">Ravyn Lenae - Love me not</span> <span class="peak">[3]</span> <span class="move-up">(+5)</span> <span class="weeks">[5 w]</span></li>
-            <li><span class="track">Raye - WHERE IS MY HUSBAND!</span> <span class="peak">[1x1]</span> <span class="move-same">(=)</span> <span class="weeks">[10 w]</span></li>
-            <li><span class="track">Taylor Swift – The Fate Of Ophelia</span> <span class="peak">[1x4]</span> <span class="move-same">(=)</span> <span class="weeks">[8 w]</span></li>
+            <li><span class="track">Ravyn Lenae - Love me not</span> <span class="peak">[1x1]</span> <span class="move-up">(+2)</span> <span class="weeks">[6 w]</span></li>
+            <li><span class="track">Taylor Swift – The Fate Of Ophelia</span> <span class="peak">[1x4]</span> <span class="move-down">(-1)</span> <span class="weeks">[9 w]</span></li>
+            <li><span class="track">David Guetta, Teddy Swims, Tones & I - Gone Gone Gone</span> <span class="peak">[3]</span> <span class="move-up">(+3)</span> <span class="weeks">[4 w]</span></li>
+            <li><span class="track">KAMRAD - Be Mine</span> <span class="peak">[4x2]</span> <span class="move-same">(=)</span> <span class="weeks">[8 w]</span></li>
+            <li><span class="track">Shakira - Zoo (ost. Zootopia 2)</span> <span class="peak">[5]</span> <span class="move-up">(+3)</span> <span class="weeks">[5 w]</span></li>
+            <li><span class="track">Raye - WHERE IS MY HUSBAND!</span> <span class="peak">[1x1]</span> <span class="move-down">(-4)</span> <span class="weeks">[11 w]</span></li>
+            <li><span class="track">Shouse & Cub Sport - Only You</span> <span class="peak">[7]</span> <span class="move-up">(+2)</span> <span class="weeks">[7 w]</span></li>
+            <li><span class="track">JISOO & ZAYN – EYES CLOSED</span> <span class="peak">[4x2]</span> <span class="move-down">(-1)</span> <span class="weeks">[8 w]</span></li>
+            <li><span class="track">John Summit & Inez - Crystallized</span> <span class="peak">[9]</span> <span class="move-up">(+10)</span> <span class="weeks">[2 w]</span></li>
+            <li><span class="track">Leonard Cogen - На заре</span> <span class="peak">[10x2]</span> <span class="move-same">(=)</span> <span class="weeks">[6 w]</span></li>
+            <li><span class="track">Katy Perry - bandaids</span> <span class="peak">[11]</span> <span class="move-up">(+1)</span> <span class="weeks">[5 w]</span></li>
+            <li><span class="track">Sabrina Carpenter - Tears</span> <span class="peak">[1x2]</span> <span class="move-down">(-7)</span> <span class="weeks">[12 w]</span></li>
+            <li><span class="track">Ren X The Skinner Brothers - So The Story Goes...</span> <span class="peak">[13]</span> <span class="move-up">(+2)</span> <span class="weeks">[3 w]</span></li>
+            <li><span class="track">Charli XCX - Chains Of Love</span> <span class="peak">[14]</span> <span class="move-up">(+2)</span> <span class="weeks">[3 w]</span></li>
+            <li><span class="track">Tyla - CHANEL</span> <span class="peak">[15]</span> <span class="move-up">(+2)</span> <span class="weeks">[2 w]</span></li>
+            <li><span class="track">MC VALERA & DJ FENIX & POKERRRFACED - Ощущение пустоты</span> <span class="peak">[6]</span> <span class="move-down">(-5)</span> <span class="weeks">[11 w]</span></li>
+            <li><span class="track">Lady Gaga - The Dead Dance</span> <span class="peak">[1x1]</span> <span class="move-down">(-4)</span> <span class="weeks">[14 w]</span></li>
+            <li><span class="track">Demi Lovato - Fast</span> <span class="peak">[1x2]</span> <span class="move-down">(-4)</span> <span class="weeks">[16 w]</span></li>
+            <li><span class="track">Tate McRae - Nobodys Girl</span> <span class="new">(NEW)</span></li>
+            <li><span class="track">СУМАСШЕДШИЕ ГОЛУБИ! – БУМАЖКИ</span> <span class="peak">[9]</span> <span class="move-down">(-2)</span> <span class="weeks">[9 w]</span></li>
         </ol>
 
         <div class="out-section">OUT</div>
         <div class="out-list">
-            <div class="out-track">Моя Мишель - Иногда <span class="peak">[15x1]</span> <span class="move-down">(-3)</span> <span class="weeks">[3 w]</span></div>
-            <div class="out-track">BLACKPINK - JUMP <span class="peak">[1x1]</span> <span class="move-down">(-6)</span> <span class="weeks">[17 w]</span></div>
+            <div class="out-track">Miley Cyrus - End Of The World <span class="peak">[1x1]</span> <span class="move-same">(=)</span> <span class="weeks">[26 w]</span></div>
         </div>
     </div>
 
