--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Курлык-чарт — 22.12.2025</title>
+    <title>Курлык-чарт — 29.12.2025</title>
     <style>
         @font-face {
             font-family: 'Neuropol';
@@ -48,6 +48,23 @@
             padding: 40px 30px;
             margin: 20px auto;
             box-shadow: 0 0 30px rgba(187, 134, 252, 0.3);
+        }
+        .year-chart {
+            width: 90%;
+            max-width: 900px;
+            background: rgba(0, 0, 0, 0.4);
+            border-radius: 20px;
+            padding: 40px 30px;
+            margin: 40px auto;
+            box-shadow: 0 0 30px rgba(187, 134, 252, 0.5);
+        }
+        .year-title {
+            font-family: 'Neuropol', sans-serif;
+            font-size: 3em;
+            text-align: center;
+            margin-bottom: 30px;
+            color: #ff00ff;
+            text-shadow: 0 0 20px #ff00ff;
         }
         ol {
             padding-left: 0;
@@ -122,37 +139,94 @@
 <body>
     <header>
         <h1>КУРЛЫК-ЧАРТ</h1>
-        <div class="subtitle">22.12.2025</div>
+        <div class="subtitle">29.12.2025</div>
     </header>
 
     <div class="chart">
         <ol>
-            <li><span class="track">Ravyn Lenae - Love me not</span> <span class="peak">[1x1]</span> <span class="move-up">(+2)</span> <span class="weeks">[6 w]</span></li>
-            <li><span class="track">Taylor Swift – The Fate Of Ophelia</span> <span class="peak">[1x4]</span> <span class="move-down">(-1)</span> <span class="weeks">[9 w]</span></li>
-            <li><span class="track">David Guetta, Teddy Swims, Tones & I - Gone Gone Gone</span> <span class="peak">[3]</span> <span class="move-up">(+3)</span> <span class="weeks">[4 w]</span></li>
-            <li><span class="track">KAMRAD - Be Mine</span> <span class="peak">[4x2]</span> <span class="move-same">(=)</span> <span class="weeks">[8 w]</span></li>
-            <li><span class="track">Shakira - Zoo (ost. Zootopia 2)</span> <span class="peak">[5]</span> <span class="move-up">(+3)</span> <span class="weeks">[5 w]</span></li>
-            <li><span class="track">Raye - WHERE IS MY HUSBAND!</span> <span class="peak">[1x1]</span> <span class="move-down">(-4)</span> <span class="weeks">[11 w]</span></li>
-            <li><span class="track">Shouse & Cub Sport - Only You</span> <span class="peak">[7]</span> <span class="move-up">(+2)</span> <span class="weeks">[7 w]</span></li>
-            <li><span class="track">JISOO & ZAYN – EYES CLOSED</span> <span class="peak">[4x2]</span> <span class="move-down">(-1)</span> <span class="weeks">[8 w]</span></li>
-            <li><span class="track">John Summit & Inez - Crystallized</span> <span class="peak">[9]</span> <span class="move-up">(+10)</span> <span class="weeks">[2 w]</span></li>
-            <li><span class="track">Leonard Cogen - На заре</span> <span class="peak">[10x2]</span> <span class="move-same">(=)</span> <span class="weeks">[6 w]</span></li>
-            <li><span class="track">Katy Perry - bandaids</span> <span class="peak">[11]</span> <span class="move-up">(+1)</span> <span class="weeks">[5 w]</span></li>
-            <li><span class="track">Sabrina Carpenter - Tears</span> <span class="peak">[1x2]</span> <span class="move-down">(-7)</span> <span class="weeks">[12 w]</span></li>
-            <li><span class="track">Ren X The Skinner Brothers - So The Story Goes...</span> <span class="peak">[13]</span> <span class="move-up">(+2)</span> <span class="weeks">[3 w]</span></li>
-            <li><span class="track">Charli XCX - Chains Of Love</span> <span class="peak">[14]</span> <span class="move-up">(+2)</span> <span class="weeks">[3 w]</span></li>
-            <li><span class="track">Tyla - CHANEL</span> <span class="peak">[15]</span> <span class="move-up">(+2)</span> <span class="weeks">[2 w]</span></li>
-            <li><span class="track">MC VALERA & DJ FENIX & POKERRRFACED - Ощущение пустоты</span> <span class="peak">[6]</span> <span class="move-down">(-5)</span> <span class="weeks">[11 w]</span></li>
-            <li><span class="track">Lady Gaga - The Dead Dance</span> <span class="peak">[1x1]</span> <span class="move-down">(-4)</span> <span class="weeks">[14 w]</span></li>
-            <li><span class="track">Demi Lovato - Fast</span> <span class="peak">[1x2]</span> <span class="move-down">(-4)</span> <span class="weeks">[16 w]</span></li>
-            <li><span class="track">Tate McRae - Nobodys Girl</span> <span class="new">(NEW)</span></li>
-            <li><span class="track">СУМАСШЕДШИЕ ГОЛУБИ! – БУМАЖКИ</span> <span class="peak">[9]</span> <span class="move-down">(-2)</span> <span class="weeks">[9 w]</span></li>
+            <li><span class="track">Taylor Swift – The Fate Of Ophelia</span> <span class="peak">[1x5]</span> <span class="move-up">(+1)</span> <span class="weeks">[10 w]</span></li>
+            <li><span class="track">David Guetta, Teddy Swims, Tones & I - Gone Gone Gone</span> <span class="peak">[2]</span> <span class="move-up">(+1)</span> <span class="weeks">[5 w]</span></li>
+            <li><span class="track">Ravyn Lenae - Love me not</span> <span class="peak">[1x1]</span> <span class="move-down">(-2)</span> <span class="weeks">[7 w]</span></li>
+            <li><span class="track">Raye - WHERE IS MY HUSBAND!</span> <span class="peak">[1x1]</span> <span class="move-up">(+2)</span> <span class="weeks">[12 w]</span></li>
+            <li><span class="track">Shouse & Cub Sport - Only You</span> <span class="peak">[5]</span> <span class="move-up">(+2)</span> <span class="weeks">[8 w]</span></li>
+            <li><span class="track">John Summit & Inez - Crystallized</span> <span class="peak">[6]</span> <span class="move-up">(+3)</span> <span class="weeks">[3 w]</span></li>
+            <li><span class="track">Leonard Cogen - На заре</span> <span class="peak">[7]</span> <span class="move-up">(+3)</span> <span class="weeks">[7 w]</span></li>
+            <li><span class="track">Shakira - Zoo (ost. Zootopia 2)</span> <span class="peak">[5]</span> <span class="move-down">(-3)</span> <span class="weeks">[6 w]</span></li>
+            <li><span class="track">Katy Perry - bandaids</span> <span class="peak">[9]</span> <span class="move-up">(+2)</span> <span class="weeks">[6 w]</span></li>
+            <li><span class="track">JISOO & ZAYN – EYES CLOSED</span> <span class="peak">[4x2]</span> <span class="move-down">(-2)</span> <span class="weeks">[9 w]</span></li>
+            <li><span class="track">Tyla - CHANEL</span> <span class="peak">[11]</span> <span class="move-up">(+4)</span> <span class="weeks">[3 w]</span></li>
+            <li><span class="track">Ren X The Skinner Brothers - So The Story Goes...</span> <span class="peak">[12]</span> <span class="move-up">(+1)</span> <span class="weeks">[4 w]</span></li>
+            <li><span class="track">Charli XCX - Chains Of Love</span> <span class="peak">[13]</span> <span class="move-up">(+1)</span> <span class="weeks">[4 w]</span></li>
+            <li><span class="track">KAMRAD - Be Mine</span> <span class="peak">[4x2]</span> <span class="move-down">(-10)</span> <span class="weeks">[9 w]</span></li>
+            <li><span class="track">Sabrina Carpenter - Tears</span> <span class="peak">[1x2]</span> <span class="move-down">(-3)</span> <span class="weeks">[13 w]</span></li>
+            <li><span class="track">KATSEYE - Gabriela</span> <span class="new">(NEW)</span></li>
+            <li><span class="track">Tate McRae - Nobodys Girl</span> <span class="peak">[17]</span> <span class="move-up">(+2)</span> <span class="weeks">[2 w]</span></li>
+            <li><span class="track">MC VALERA & DJ FENIX & POKERRRFACED - Ощущение пустоты</span> <span class="peak">[6]</span> <span class="move-down">(-2)</span> <span class="weeks">[12 w]</span></li>
+            <li><span class="track">Lady Gaga - The Dead Dance</span> <span class="peak">[1x1]</span> <span class="move-down">(-2)</span> <span class="weeks">[15 w]</span></li>
+            <li><span class="track">BigXthaPlug ft. Post Malone - Cold</span> <span class="new">(NEW)</span></li>
         </ol>
 
         <div class="out-section">OUT</div>
         <div class="out-list">
-            <div class="out-track">Miley Cyrus - End Of The World <span class="peak">[1x1]</span> <span class="move-same">(=)</span> <span class="weeks">[26 w]</span></div>
+            <div class="out-track">СУМАСШЕДШИЕ ГОЛУБИ! – БУМАЖКИ <span class="peak">[9]</span> <span class="move-down">(-2)</span> <span class="weeks">[9 w]</span></div>
+            <div class="out-track">Demi Lovato - Fast <span class="peak">[1x2]</span> <span class="move-down">(-4)</span> <span class="weeks">[16 w]</span></div>
         </div>
+    </div>
+
+    <div class="year-chart">
+        <div class="year-title">ТОП-50 ИТОГИ ГОДА 2025</div>
+        <ol>
+            <li><span class="track">Lady Gaga - Abracadabra</span></li>
+            <li><span class="track">Miley Cyrus - End of the World</span></li>
+            <li><span class="track">Tommy Cash - Espresso Macchiato</span></li>
+            <li><span class="track">David Guetta & Sia - Beautiful People</span></li>
+            <li><span class="track">bbno$, ironmouse - 1-800</span></li>
+            <li><span class="track">Lady Gaga & Bruno Mars - Die With A Smile</span></li>
+            <li><span class="track">Doja Cat & Don Toliver - Lose my mind</span></li>
+            <li><span class="track">Sabrina Carpenter - Manchild</span></li>
+            <li><span class="track">Taylor Swift - The Fate Of Ophelia</span></li>
+            <li><span class="track">Lady Gaga - The Dead Dance</span></li>
+            <li><span class="track">Demi Lovato - Fast</span></li>
+            <li><span class="track">Calvin Harris feat. Clementine Douglas - Blessings</span></li>
+            <li><span class="track">BLACKPINK - JUMP</span></li>
+            <li><span class="track">Tate McRae - Sports car</span></li>
+            <li><span class="track">Raye - WHERE IS MY HUSBAND!</span></li>
+            <li><span class="track">Sabrina Carpenter - Tears</span></li>
+            <li><span class="track">AY YOLA - Homay</span></li>
+            <li><span class="track">KAJ - Bara Bada Bastu</span></li>
+            <li><span class="track">Alfa & Manu Chao - a me mi piace</span></li>
+            <li><span class="track">Rudimental & Khalid - All I Know</span></li>
+            <li><span class="track">Tate McRae - Just Keep Watching</span></li>
+            <li><span class="track">Doechii - Anxiety</span></li>
+            <li><span class="track">Ed Sheeran - Azizam</span></li>
+            <li><span class="track">Kendrick Lamar & SZA - luther</span></li>
+            <li><span class="track">ROSÉ & Bruno Mars - APT.</span></li>
+            <li><span class="track">Sabrina Carpenter - Espresso</span></li>
+            <li><span class="track">The Weeknd - Open Hearts</span></li>
+            <li><span class="track">Scooter & Paul Elstak & Joost - Luv U More</span></li>
+            <li><span class="track">Billie Eilish - BIRDS OF A FEATHER</span></li>
+            <li><span class="track">sombr - back to friends</span></li>
+            <li><span class="track">MC VALERA & DJ FENIX & POKERRRFACED - Ощущение пустоты</span></li>
+            <li><span class="track">Lady Gaga - Disease</span></li>
+            <li><span class="track">Charli XCX - party 4 u</span></li>
+            <li><span class="track">Go-Jo - Milkshake Man</span></li>
+            <li><span class="track">Selena Gomez, benny blanco - Sunset Blvd</span></li>
+            <li><span class="track">MC VALERA - Песня про яйца (ft. DJ Soroka)</span></li>
+            <li><span class="track">Tommy Cash - Ok</span></li>
+            <li><span class="track">Shakira - Zoo</span></li>
+            <li><span class="track">JISOO & ZAYN - EYES CLOSED</span></li>
+            <li><span class="track">KAMRAD - Be Mine</span></li>
+            <li><span class="track">Shouse & Cub Sport - Only You</span></li>
+            <li><span class="track">Ravyn Lenae - Love me not</span></li>
+            <li><span class="track">David Guetta, Teddy Swims, Tones & I - Gone Gone Gone</span></li>
+            <li><span class="track">MC VALERA FEAT. BELOLOBYK - Весёлая песня</span></li>
+            <li><span class="track">NEIKED & Portugal. The Man - Glide</span></li>
+            <li><span class="track">Playboi Carti - EVIL J0RDAN</span></li>
+            <li><span class="track">IVE & David Guetta - Supernova Love</span></li>
+            <li><span class="track">Abor & Tynna - Baller</span></li>
+            <li><span class="track">Alex Warren - Ordinary</span></li>
+            <li><span class="track">Misha Miller x Alex Velea - BAM BAM</span></li>
+        </ol>
     </div>
 
     <footer>
